- Corrigindo bugs e gap de token expirado

--- a/www/styles/app.css
+++ b/www/styles/app.css
@@ -91,7 +91,24 @@ input{
 }
 
 .text-center{
-    text-align: center;
+    text-align: center!important;
+}
+
+.qtd-icon i{
+    font-size: 30px;
+    color: #ee6e73;
+    cursor: pointer;
+}
+
+.vlr-qtd{
+    position: relative;
+    font-size: 30px;
+    margin-top: -7px;
+    color: #ee6e73;
+}
+
+.input-qtd{
+    padding-top: 15px!important;
 }
 
 .corsiva{
@@ -148,6 +165,14 @@ input{
     right: 0;
     font-size: 30px;
     border: 1px solid;
+    z-index: 1;
+    position: absolute;
+}
+
+.color-qtd{
+    color: #ee6e73 !important;
+    left: 0;
+    font-size: 30px;
     z-index: 1;
     position: absolute;
 }
